deploy/kubernetes/infra-elasticsearch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ops

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: ops
spec:
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: elasticsearch:7.9.2
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        volumeMounts:
        - name: elasticsearch-data
          mountPath: /usr/share/elasticsearch/data
      volumes: 
      - name: elasticsearch-data
        persistentVolumeClaim:
          claimName: es-pvc 

---

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: ops
spec:
  selector:
    app: elasticsearch
  ports:
  - port: 9200
    targetPort: 9200
    protocol: TCP
