deploy/kubernetes/order-svr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order.svc
  namespace: k9s-practice
  labels:
    app: order.svc
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: order.svc
  template:
    metadata:
      labels:
        app: order.svc
    spec:
      containers:
      - name: order.svc
        image: order:latest
        ports:
        - containerPort: 8888
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
        - name: timezone
          mountPath: /etc/localtime
      volumes:
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai

---

apiVersion: v1
kind: Service
metadata:
  name: order.svc-svc
  namespace: k9s-practice
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: order.svc
