deploy/kubernetes/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-order
  namespace: k8s-practice
  labels:
    app: app-order
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: app-order
  template:
    metadata:
      labels:
        app: app-order
    spec:
      containers:
      - name: app-order
        image: kilii/svc-app-order:0.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
        - containerPort: 9999
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
        - name: timezone
          mountPath: /etc/localtime
      volumes:
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai

---

apiVersion: v1
kind: Service
metadata:
  name: app-order-svc
  namespace: k8s-practice
spec:
  ports:
  - port: 8888
    targetPort: 8888
    name: rpc
  - port: 9999
    targetPort: 9999
    name: http
  selector:
    app: app-order
